# python-project-template

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: black.yml  linter.yml  test.yml
docs/: conf.py  index.rst
src/sample_package/: __init__.py
tests/: test_configuration_network.py  test_main.py
