[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.poetry]
name = 'sample_package'
version = '0.1.0'
description = 'something something microservices'
authors = ['The Author <first.last@uni-weimar.de>']
keywords=['sample']
license='GPL-3.0+'
packages = [
    { include = 'sample_package', from = 'src' },
]

[tool.poetry.dependencies]
python = '^3.6'

[tool.poetry.dev-dependencies]
black = { version = '*', allow-prereleases = true }
pytest = '^5.1'
pytest-cov = '^2.7'
tox = '^3.13'
sphinx = "^2.2"
flake8 = "^3.7"
pydocstyle = "^4.0"
jedi = "^0.15.1"
pre-commit = "^1.20"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
