[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.poetry]
name = 'sample_package'
version = '0.1.0'
description = 'Hi.'
authors = ['Nicolai Ruckel <nicolai.ruckel@uni-weimar.de>']
keywords=['sample']
license='GPL-3.0+'
packages = [
    { include = 'sample_package', from = 'src' },
]

[tool.poetry.dependencies]
python = '^3.6'

[tool.poetry.dev-dependencies]
black = { version = '*', allow-prereleases = true }
coverage = '^5.1'
flake8 = "^3.7.9"
pylint = "^2.6.0"
pytest = '^5.1'
pytest-cov = '^2.7'
pydocstyle = "^5.0.2"

[tool.pylint.basic]
good-names = "i,id"

[tool.pylint.master]
disable=["E0401","R0912","W0511"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
